2012-09-27  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Clean up includes in SocketStreamHandle
        https://bugs.webkit.org/show_bug.cgi?id=97843

        Reviewed by Kentaro Hara.

        Part of a refactoring series. See tracking bug 82948.

        * src/SocketStreamHandle.cpp:

2012-09-27  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Clean up includes in AudioDestinationChromium
        https://bugs.webkit.org/show_bug.cgi?id=97845

        Reviewed by Kentaro Hara.

        Part of a refactoring series. See tracking bug 82948.

        * src/AudioDestinationChromium.cpp:

2012-09-27  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove unused PlatformSupport reference in WebFrameImpl
        https://bugs.webkit.org/show_bug.cgi?id=97842

        Reviewed by Kentaro Hara.

        Part of a refactoring series. See tracking bug 82948.

        * src/WebFrameImpl.cpp:

2012-09-27  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove screen-related functions from PlatformSupport
        https://bugs.webkit.org/show_bug.cgi?id=97474

        Reviewed by Adam Barth.

        Screen-related functions like screenHorizontalDPI that
        used to be on PlatformSupport are now accessed through a new
        PlatformPageClient attached to Widget in WebCore-land, which is
        implemented by ChromeClientImpl in WebKit-land, which proxies
        calls to WebWidgetClient, which is actually implemented in
        Chromium-land.

        * public/WebScreenInfo.h:
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::screenInfo):
        (WebKit):
        * src/ChromeClientImpl.h:
        (WebKit):
        (WebKit::ChromeClientImpl::platformPageClient):
        (ChromeClientImpl):
        * src/PlatformSupport.cpp:
        (WebCore):

2012-09-27  Nasko Oskov  <nasko@chromium.org>

        Remove unused methods from Chromium WebKit API.
        https://bugs.webkit.org/show_bug.cgi?id=95254
